<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloFormEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevaReserva"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="10pt"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerSalas2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/itemSpinnerSalas2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/phSpinnerSalas"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutfE2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/btnFechaEntrada2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/phfEntrada"
                android:inputType="none"
                android:minHeight="48dp"
                android:onClick="openDatePickerE" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutfS2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/btnFechaSalida2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/phfSalida"
                android:inputType="none"
                android:minHeight="48dp"
                android:onClick="openDatePickerS" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerAdultos2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/itemSpinnerAdultos2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/phSpinnerAdultos"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerNinios2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/itemSpinnerNinios2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/phSpinnerNinios"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutNombre2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextNombre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phNombre"
                android:minHeight="48dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutEmail2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phEmail"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutDni2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextDni2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/phDni" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutTlf2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextTlf2"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:hint="@string/phTlf" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutComentario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EditTextComentario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phComentario"
                android:inputType="textMultiLine"
                android:lines="5"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/btnEditarReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="actualizarReserva"
            android:text="@string/editarReserva" />


    </LinearLayout>

</ScrollView>