<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MapsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <include
                layout="@layout/main_toolbar">

            </include>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ubicacionTittle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/ubicacion"
                    android:textColor="@color/black"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacionText"
                    android:textColor="@color/black">

                </TextView>
            </RelativeLayout>
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                tools:context=".MapsActivity" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/transporteTittle"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/transporteTittle"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/transporte"
                    android:layout_below="@id/transporteTittle"
                    android:text="@string/transporte"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/webTransporteTittle"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textSize="20sp"
                    android:layout_below="@id/transporte"
                    android:text="@string/webTittle"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/link1"
                    android:layout_below="@id/webTransporteTittle"
                    android:paddingTop="20dp"
                    android:text="@string/linkUrbano"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/link2"
                    android:layout_below="@id/link1"
                    android:paddingTop="20dp"
                    android:text="@string/linkInterUrbano"
                    android:textColor="@color/black">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/link3"
                    android:paddingTop="20dp"
                    android:layout_below="@id/link2"
                    android:text="@string/link3"
                    android:textColor="@color/black">

                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer">

        </include>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>